--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection":"Data source=datingapp.db"
+    "DefaultConnection":"Data source=DatingApp.db"
   }
 }
