complete JWT configuration + code Cleaning

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,6 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "TokenKey":"kdjdjd$$$eel1254#",
   "ConnectionStrings": {
     "DefaultConnection":"Data source=DatingApp.db"
   }
