create register fucntionality

--- a/client/angular.json
+++ b/client/angular.json
@@ -72,7 +72,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "sslKey": "./ssl/key.key",
+            "sslKey": "./ssl/server.key",
             "sslCert": "./ssl/server.crt",
             "ssl":true
           },
