--- a/client/angular.json
+++ b/client/angular.json
@@ -32,7 +32,10 @@
             "styles": [
               "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css"
+              "./node_modules/bootswatch/dist/zephyr/bootstrap.css",
+              "./node_modules/font-awesome/css/font-awesome.css",
+              "./node_modules/ngx-toastr/toastr.css",
+               "src/styles.css"
             ],
             "scripts": []
           },
