create repository  class + update usersController

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,6 +8,7 @@
   },
   "TokenKey":"kdjdjd$$$eel1254#",
   "ConnectionStrings": {
-    "DefaultConnection":"Data source=DatingApp.db"
+    "DefaultConnection":"Data source=DatingApp.db",
+    "PostgresConnection":"User ID=zied;Password=Inov123#;Server=localhost;Port=5432;Database=dating_app; Integrated Security=true;Pooling=true;"
   }
 }
