create photo upload functionality

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "CloudinarySettings":{
+    "CloudName":"evanoss",
+    "ApiKey":"339941878466186",
+    "ApiSecret":"8nCyAN4hqZB3kCUCg5fg5qz8wR0"
+  },
   "AllowedHosts": "*"
 }
