--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -27,7 +27,6 @@
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": false,
-    "enableIvy":false
+    "strictTemplates": false
   }
 }
